--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@types/react-helmet": "^6.1.11",
     "clsx": "^2.0.0",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
