--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rodrigue-portfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,19 +12,20 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@types/react-helmet": "^6.1.11",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.18",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.292.0",
+    "postcss": "^8.4.35",
+    "puppeteer": "^24.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.18.0",
-    "vite": "^4.4.5",
-    "@vitejs/plugin-react": "^4.0.3",
-    "typescript": "^5.0.2",
+    "react-router-dom": "^6.29.0",
     "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.18"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
