--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.29.0",
+    "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.1",
+    "tsparticles": "^3.8.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "jsdom": "^26.1.0",
+    "vitest": "^3.2.4"
   }
 }
